--- a/packages/stateofjs/lib/i18n/common/yml/zh-Hans.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/zh-Hans.yml
@@ -135,18 +135,18 @@ translations:
   - key: sections.user_info.description # TODO
     t: Let's get to know the real you.
 
-  - key: sections.resources.title # TODO
-    t: Resources
+  - key: sections.resources.title
+    t: 资源
   - key: sections.resources.description # TODO
     t: What {topic} resources do you consult?
 
-  - key: sections.opinions.title # TODO
-    t: Opinions
+  - key: sections.opinions.title
+    t: 看法
   - key: sections.opinions.description # TODO
     t: How do you feel about the state of {topic}?
 
   - key: sections.other_tools.title # TODO
-    t: Other Tools
+    t: 其他工具
   - key: sections.other_tools.description # TODO
     t: For these tools & technologies, just check the ones that you use regularly.
 
@@ -155,20 +155,20 @@ translations:
   ###########################################################################
 
   # features
-  - key: options.features.never_heard # TODO
-    t: 🤷 Never heard of it/Not sure what it is
-  - key: options.features.heard # TODO
-    t: ✅ Know what it is, but haven't used it
-  - key: options.features.used # TODO
-    t: 👍 I've used it
+  - key: options.features.never_heard
+    t: 🤷 没听说过/不确定它是什么
+  - key: options.features.heard
+    t: ✅ 知道它是什么，但是没用过
+  - key: options.features.used
+    t: 👍 用过
 
   # features (short versions)
-  - key: options.features.never_heard.short # TODO
-    t: Never heard of it
-  - key: options.features.heard.short # TODO
-    t: Know about it
-  - key: options.features.used.short # TODO
-    t: Have used it
+  - key: options.features.never_heard.short
+    t: 没听说过/不确定它是什么
+  - key: options.features.heard.short
+    t: 知道它是什么，但是没用过
+  - key: options.features.used.short
+    t: 用过
 
   # patterns
   - key: options.patterns.use_never # TODO
@@ -183,28 +183,28 @@ translations:
     t: Use as much as I can
 
   # tools experience
-  - key: options.tools.never_heard # TODO
-    t: 🤷 Never heard of it/Not sure what it is
-  - key: options.tools.interested # TODO
-    t: ✅ Heard of it > Would like to learn
-  - key: options.tools.not_interested # TODO
-    t: 🚫 Heard of it > Not interested
-  - key: options.tools.would_use # TODO
-    t: 👍 Used it > Would use again
-  - key: options.tools.would_not_use # TODO
-    t: 👎 Used it > Would not use again
+  - key: options.tools.never_heard
+    t: 🤷 我从来没有听说过这个技术
+  - key: options.tools.interested
+    t: ✅ 我听说过这个技术，且有学习的意向
+  - key: options.tools.not_interested
+    t: 🚫 我听说过这个技术，但我不感兴趣
+  - key: options.tools.would_use
+    t: 👍 我使用过这个技术，以后也愿意再次使用
+  - key: options.tools.would_not_use
+    t: 👎 我使用过这个技术，但以后不愿意再用
 
   # tools experience (short versions)
-  - key: options.tools.never_heard # TODO
-    t: Never heard
-  - key: options.tools.interested # TODO
-    t: Interested
-  - key: options.tools.not_interested # TODO
-    t: Not interested
-  - key: options.tools.would_use # TODO
-    t: Would use again
-  - key: options.tools.would_not_use # TODO
-    t: Would not use
+  - key: options.tools.never_heard
+    t: 从来没听说过
+  - key: options.tools.interested
+    t: 听说过，且打算学习
+  - key: options.tools.not_interested
+    t: 听说过，但不感兴趣
+  - key: options.tools.would_use
+    t: 使用过，以后也愿意用
+  - key: options.tools.would_not_use
+    t: 使用过，以后不愿意用
   
   # happiness
   - key: options.happiness.very_unhappy # TODO
@@ -219,132 +219,132 @@ translations:
     t: Very Happy
 
   # opinions
-  - key: options.opinions.disagree_strongly # TODO
-    t: Disagree Strongly
-  - key: options.opinions.disagree # TODO
-    t: Disagree
-  - key: options.opinions.neutral # TODO
-    t: Neutral
-  - key: options.opinions.agree # TODO
-    t: Agree
-  - key: options.opinions.agree_strongly # TODO
-    t: Agree Strongly
+  - key: options.opinions.disagree_strongly
+    t: 强烈反对
+  - key: options.opinions.disagree
+    t: 反对
+  - key: options.opinions.neutral
+    t: 中立
+  - key: options.opinions.agree
+    t: 同意
+  - key: options.opinions.agree_strongly
+    t: 十分同意
     
   # years of experience
-  - key: options.years_of_experience.range_less_than_1 # TODO
-    t: Less than one year
-  - key: options.years_of_experience.range_1_2 # TODO
-    t: 1 to 2 years
-  - key: options.years_of_experience.range_2_5 # TODO
-    t: 2 to 5 years
-  - key: options.years_of_experience.range_5_10 # TODO
-    t: 5 to 10 years
-  - key: options.years_of_experience.range_10_20 # TODO
-    t: 10 to 20 years
-  - key: options.years_of_experience.range_more_than_20 # TODO
-    t: More than 20 years
+  - key: options.years_of_experience.range_less_than_1
+    t: 少于 1 年
+  - key: options.years_of_experience.range_1_2
+    t: 1 至 2 年
+  - key: options.years_of_experience.range_2_5
+    t: 2 至 5 年
+  - key: options.years_of_experience.range_5_10
+    t: 5 至 10 年
+  - key: options.years_of_experience.range_10_20
+    t: 10 至 20 年
+  - key: options.years_of_experience.range_more_than_20
+    t: 20 年以上
 
   # years of experience (short versions)
-  - key: options.years_of_experience.range_less_than_1.short # TODO
+  - key: options.years_of_experience.range_less_than_1.short
     t: '<1'
-  - key: options.years_of_experience.range_1_2.short # TODO
+  - key: options.years_of_experience.range_1_2.short
     t: 1-2
-  - key: options.years_of_experience.range_2_5.short # TODO
+  - key: options.years_of_experience.range_2_5.short
     t: 2-5
-  - key: options.years_of_experience.range_5_10 # TODO
+  - key: options.years_of_experience.range_5_10
     t: 5-10
-  - key: options.years_of_experience.range_10_20.short # TODO
+  - key: options.years_of_experience.range_10_20.short
     t: 10-20
-  - key: options.years_of_experience.range_more_than_20.short # TODO
+  - key: options.years_of_experience.range_more_than_20.short
     t: '>20'
 
   # company size
-  - key: options.company_size.range_1 # TODO
-    t: One employee
-  - key: options.company_size.range_1_5 # TODO
-    t: 1 to 5 employees
-  - key: options.company_size.range_5_10 # TODO
-    t: 5 to 10 employees
-  - key: options.company_size.range_10_20 # TODO
-    t: 10 to 20 employees
-  - key: options.company_size.range_20_50 # TODO
-    t: 20 to 50 employees
-  - key: options.company_size.range_50_100 # TODO
-    t: 50 to 100 employees
-  - key: options.company_size.range_100_1000 # TODO
-    t: 100 to 1000 employees
-  - key: options.company_size.range_more_than_1000 # TODO
-    t: More than 1000 employees
+  - key: options.company_size.range_1
+    t: 1 个雇员
+  - key: options.company_size.range_1_5
+    t: 1 至 5 个雇员
+  - key: options.company_size.range_5_10
+    t: 5 至 10 个雇员
+  - key: options.company_size.range_10_20
+    t: 10 至 20 个雇员
+  - key: options.company_size.range_20_50
+    t: 20 至 50 个雇员
+  - key: options.company_size.range_50_100
+    t: 50 至 100 个雇员
+  - key: options.company_size.range_100_1000
+    t: 100 至 1000 个雇员
+  - key: options.company_size.range_more_than_1000
+    t: 超过 1000 个雇员
 
   # company size (short versions)
-  - key: options.company_size.range_1.short # TODO
+  - key: options.company_size.range_1.short
     t: 1
-  - key: options.company_size.range_1_5.short # TODO
+  - key: options.company_size.range_1_5.short
     t: 1-5
-  - key: options.company_size.range_5_10.short # TODO
+  - key: options.company_size.range_5_10.short
     t: 5-10
-  - key: options.company_size.range_10_20.short # TODO
+  - key: options.company_size.range_10_20.short
     t: 10-20
-  - key: options.company_size.range_20_50.short # TODO
+  - key: options.company_size.range_20_50.short
     t: 20-50
-  - key: options.company_size.range_50_100.short # TODO
+  - key: options.company_size.range_50_100.short
     t: 50-100
-  - key: options.company_size.range_100_1000.short # TODO
+  - key: options.company_size.range_100_1000.short
     t: 100-1000
-  - key: options.company_size.range_more_than_1000.short # TODO
+  - key: options.company_size.range_more_than_1000.short
     t: '>1000'
 
   # salary
-  - key: options.yearly_salary.range_work_for_free # TODO
-    t: I work for free
-  - key: options.yearly_salary.range_0_10 # TODO
-    t: $0k-$10k
-  - key: options.yearly_salary.range_10_30 # TODO
-    t: $10k-$30k
-  - key: options.yearly_salary.range_30_50 # TODO
-    t: $30k-$50k
-  - key: options.yearly_salary.range_50_100 # TODO
-    t: $50k-$100k
-  - key: options.yearly_salary.range_100_200 # TODO
-    t: $100k-$200k
-  - key: options.yearly_salary.range_more_than_200 # TODO
-    t: more than $200k
+  - key: options.yearly_salary.range_work_for_free
+    t: 我没有收入
+  - key: options.yearly_salary.range_0_10
+    t: 0 美元 - 1 万美元
+  - key: options.yearly_salary.range_10_30
+    t: 1 万美元 - 3 万美元
+  - key: options.yearly_salary.range_30_50
+    t: 3 万美元 - 5 万美元
+  - key: options.yearly_salary.range_50_100
+    t: 5 万美元 - 10 万美元
+  - key: options.yearly_salary.range_100_200
+    t: 10 万美元 - 20 万美元
+  - key: options.yearly_salary.range_more_than_200
+    t: 大于 20 万美元
 
   # salary (short versions)
-  - key: options.yearly_salary.range_work_for_free.short # TODO
+  - key: options.yearly_salary.range_work_for_free.short
     t: '$0'
-  - key: options.yearly_salary.range_0_10.short # TODO
+  - key: options.yearly_salary.range_0_10.short
     t: $0k-$10k
-  - key: options.yearly_salary.range_10_30.short # TODO
+  - key: options.yearly_salary.range_10_30.short
     t: $10k-$30k
-  - key: options.yearly_salary.range_30_50.short # TODO
+  - key: options.yearly_salary.range_30_50.short
     t: $30k-$50k
-  - key: options.yearly_salary.range_50_100.short # TODO
+  - key: options.yearly_salary.range_50_100.short
     t: $50k-$100k
-  - key: options.yearly_salary.range_100_200.short # TODO
+  - key: options.yearly_salary.range_100_200.short
     t: $100k-$200k
-  - key: options.yearly_salary.range_more_than_200.short # TODO
+  - key: options.yearly_salary.range_more_than_200.short
     t: '>$200k'
 
   # job titles
-  - key: options.job_title.cto # TODO
+  - key: options.job_title.cto
     t: CTO
-  - key: options.job_title.front_end_developer # TODO
-    t: Front End Developer/Engineer
-  - key: options.job_title.back_end_developer # TODO
-    t: Back End Developer/Engineer
-  - key: options.job_title.full_stack_developer # TODO
-    t: Full Stack Developer/Engineer
-  - key: options.job_title.web_developer # TODO
-    t: Web Developer
-  - key: options.job_title.web_designer # TODO
-    t: Web Designer
-  - key: options.job_title.ux_designer # TODO
-    t: UX Designer
-  - key: options.job_title.ui_designer # TODO
-    t: UI Designer
-  - key: options.job_title.back_end_dev # TODO
-    t: Back-end Developer/Engineer
+  - key: options.job_title.front_end_developer
+    t: 前端开发者/工程师
+  - key: options.job_title.back_end_developer
+    t: 后端开发者/工程师
+  - key: options.job_title.full_stack_developer
+    t: 全栈开发者/工程师
+  - key: options.job_title.web_developer
+    t: Web 开发者
+  - key: options.job_title.web_designer
+    t: Web 设计师
+  - key: options.job_title.ux_designer
+    t: UX 设计师
+  - key: options.job_title.ui_designer
+    t: UI 设计师
+  - key: options.job_title.back_end_dev
+    t: 后端开发者/工程师
 
   # JavaScript proficiency
 
@@ -361,29 +361,29 @@ translations:
 
   # CSS proficiency
 
-  - key: options.css_proficiency.0 # TODO
-    t: Virtually no knowledge of CSS
-  - key: options.css_proficiency.1 # TODO
-    t: Using CSS frameworks and tweaking existing styles
-  - key: options.css_proficiency.2 # TODO
-    t: Knowing specificity rules, being able to create layouts
-  - key: options.css_proficiency.3 # TODO
-    t: Mastering animations, interactions, transitions, etc.
-  - key: options.css_proficiency.4 # TODO
-    t: Able to style an entire front-end from scratch following a consistent methodology
+  - key: options.css_proficiency.0
+    t: 实际上没有 CSS 经验
+  - key: options.css_proficiency.1
+    t: 使用 CSS 框架以及调整现有样式
+  - key: options.css_proficiency.2
+    t: 知道特定规则，能够创建布局
+  - key: options.css_proficiency.3
+    t: 精通动画、交互、过渡等
+  - key: options.css_proficiency.4
+    t: 能够以统一的方法论从零构建整个前端站点的样式
 
   # Back-end proficiency
 
-  - key: options.backend_proficiency.0 # TODO
-    t: Not able to handle any back-end work
-  - key: options.backend_proficiency.1 # TODO
-    t: Able to set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
-  - key: options.backend_proficiency.2 # TODO
-    t: Able to develop apps using pre-existing frameworks (Rails, Laravel, etc.)
-  - key: options.backend_proficiency.3 # TODO
-    t: Setting up an entire back-end from scratch (Go, Node, etc.)
-  - key: options.backend_proficiency.4 # TODO
-    t: Able to handle complex multi-server or microservices architectures
+  - key: options.backend_proficiency.0
+    t: 无法完成任何后端工作
+  - key: options.backend_proficiency.1
+    t: 会配置一体化 CMS（WordPress 等）或静态站点生成器（Jekyll 等）
+  - key: options.backend_proficiency.2
+    t: 能够使用现有框架开发应用（Rails、Laravel 等）
+  - key: options.backend_proficiency.3
+    t: 从零搭建整个后端（Go、Node 等）
+  - key: options.backend_proficiency.4
+    t: 能够掌控复杂的多台服务器或微服务架构
 
   # Proficiency (generic versions)
   - key: options.proficiency.0 # TODO
@@ -399,27 +399,39 @@ translations:
 
   # Gender
 
-  - key: options.gender.female # TODO
-    t: Female
-  - key: options.gender.male # TODO
-    t: Male
-  - key: options.gender.non_binary # TODO
-    t: Non-Binary/Third Gender
-  - key: options.gender.prefer_not_to_say # TODO
-    t: Prefer not to say
+  - key: options.gender.female
+    t: 女性
+  - key: options.gender.male
+    t: 男性
+  - key: options.gender.non_binary
+    t: 第三性别
+  - key: options.gender.prefer_not_to_say
+    t: 未透露
 
   # Skin Tone
 
-  - key: options.skin_tone.0 # TODO
+  - key: options.skin_tone.0
     t: 🧑🏻‍🦲
-  - key: options.skin_tone.1 # TODO
+  - key: options.skin_tone.1
     t: 🧑🏼‍🦲
-  - key: options.skin_tone.2 # TODO
+  - key: options.skin_tone.2
     t: 🧑🏽‍🦲
-  - key: options.skin_tone.3 # TODO
+  - key: options.skin_tone.3
     t: 🧑🏾‍🦲
-  - key: options.skin_tone.4 # TODO
+  - key: options.skin_tone.4
     t: 🧑🏿‍🦲
+
+  # image fallback
+  - key: options.skin_tone.0
+    t: <img src="/emojis/icons8-bald-man-light-skin-tone-100.png" alt="Light skin tone emoji"/>
+  - key: options.skin_tone.1
+    t: <img src="/emojis/icons8-bald-man-medium-light-skin-tone-100.png" alt="Medium-light skin tone emoji"/>
+  - key: options.skin_tone.2
+    t: <img src="/emojis/icons8-bald-man-medium-skin-tone-100.png" alt="Medium skin tone emoji"/>
+  - key: options.skin_tone.3
+    t: <img src="/emojis/icons8-bald-man-medium-dark-skin-tone-100.png" alt="Medium skin tone emoji"/>
+  - key: options.skin_tone.4
+    t: <img src="/emojis/icons8-bald-man-dark-skin-tone-100.png" alt="Dark skin tone emoji"/>
 
   ###########################################################################
   # Tools
@@ -441,28 +453,28 @@ translations:
   ###########################################################################
 
   # years of experience
-  - key: user_info.years_of_experience # TODO
-    t: Years of Experience
+  - key: user_info.years_of_experience
+    t: 工龄
   - key: user_info.years_of_experience.description # TODO
     t: How long you've been working or studying in this field.
 
   # company size
-  - key: user_info.company_size # TODO
-    t: Company Size
-  - key: user_info.company_size.description # TODO
-    t: How big your company is.
+  - key: user_info.company_size
+    t: 公司规模
+  - key: user_info.company_size.description 
+    t: 所在公司规模分析
 
   # salary ranges
-  - key: user_info.yearly_salary # TODO
-    t: Yearly Salary
-  - key: user_info.yearly_salary.description # TODO
-    t: In USD.
+  - key: user_info.yearly_salary
+    t: 薪资
+  - key: user_info.yearly_salary.description
+    t: 年收入（美元）
 
   # job title
-  - key: user_info.job_title # TODO
-    t: Job Title
-  - key: user_info.job_title.description # TODO
-    t: How do you introduce yourself at parties?
+  - key: user_info.job_title
+    t: 职位名称
+  - key: user_info.job_title.description
+    t: 你在社交场合如何介绍自己？
 
   # javascript proficiency
 
@@ -485,8 +497,8 @@ translations:
     t: How proficient are you at back-end development?
 
   # gender
-  - key: user_info.gender # TODO
-    t: Gender
+  - key: user_info.gender
+    t: 性别
 
 
   # skin tone/appearance
